Pagina para ver a View

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,6 +21,7 @@
         <a th:href="@{/view/enderecos}">Endereços</a>
         <a th:href="@{/view/ocorrencias}">Ocorrências</a>
         <a th:href="@{/view/casos}">Casos</a>
+        <a th:href="@{/view/casos-ativos}">Casos Ativos (VIEW)</a>
         <a th:href="@{/view/evidencias}">Evidências</a>
         <a th:href="@{/view/relatorios}">Relatórios</a>
         <a th:href="@{/view/depoimentos}">Depoimentos</a>
@@ -38,6 +39,7 @@
         <li><a th:href="@{/view/enderecos}">Endereços</a> (Endpoint: <code>/api/enderecos</code>)</li>
         <li><a th:href="@{/view/ocorrencias}">Ocorrências</a> (Endpoint: <code>/api/ocorrencias</code>)</li>
         <li><a th:href="@{/view/casos}">Casos</a> (Endpoint: <code>/api/casos</code>)</li>
+        <li><a th:href="@{/view/casos-ativos}">Casos Ativos (VIEW)</a> (Endpoint: <code>/api/view/casos-ativos</code>)</li>
         <li><a th:href="@{/view/evidencias}">Evidências</a> (Endpoint: <code>/api/evidencias</code>)</li>
         <li><a th:href="@{/view/relatorios}">Relatórios</a> (Endpoint: <code>/api/relatorios</code>)</li>
         <li><a th:href="@{/view/depoimentos}">Depoimentos</a> (Endpoint: <code>/api/depoimentos</code>)</li>
