--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,7 @@
     <nav class="navbar">
         <a th:href="@{/}">Início</a>
         <a th:href="@{/register/pessoa}">Cadastrar Pessoa</a>
+        <a th:href="@{/register/ocorrencia}">Registrar Ocorrência</a>
         <a th:href="@{/view/pessoas}">Pessoas</a>
         <a th:href="@{/view/policiais}">Policiais</a>
         <a th:href="@{/view/delegacias}">Delegacias</a>
@@ -22,6 +23,7 @@
         <a th:href="@{/view/ocorrencias}">Ocorrências</a>
         <a th:href="@{/view/casos}">Casos</a>
         <a th:href="@{/view/casos-ativos}">Casos Ativos (VIEW)</a>
+        <a th:href="@{/procedure/encerrar-caso}">Encerrar Caso</a>
         <a th:href="@{/view/evidencias}">Evidências</a>
         <a th:href="@{/view/relatorios}">Relatórios</a>
         <a th:href="@{/view/depoimentos}">Depoimentos</a>
@@ -37,6 +39,7 @@
         <li><a th:href="@{/view/policiais}">Policiais</a> (Endpoint: <code>/api/policiais</code>)</li>
         <li><a th:href="@{/view/delegacias}">Delegacias</a> (Endpoint: <code>/api/delegacias</code>)</li>
         <li><a th:href="@{/view/enderecos}">Endereços</a> (Endpoint: <code>/api/enderecos</code>)</li>
+        <li><a th:href="@{/register/ocorrencia}">Registrar Ocorrência</a> (Endpoint: <code>POST /api/ocorrencias</code>)</li>
         <li><a th:href="@{/view/ocorrencias}">Ocorrências</a> (Endpoint: <code>/api/ocorrencias</code>)</li>
         <li><a th:href="@{/view/casos}">Casos</a> (Endpoint: <code>/api/casos</code>)</li>
         <li><a th:href="@{/view/casos-ativos}">Casos Ativos (VIEW)</a> (Endpoint: <code>/api/view/casos-ativos</code>)</li>
