--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -20,6 +20,7 @@
         <a th:href="@{/view/ocorrencias}">Ocorrências</a>
         <a th:href="@{/view/casos}">Casos</a>
         <a th:href="@{/view/casos-ativos}">Casos Ativos (VIEW)</a>
+        <a th:href="@{/view/encerrar_caso}">Encerrar Caso</a>
         <a th:href="@{/view/evidencias}">Evidências</a>
         <a th:href="@{/view/relatorios}">Relatórios</a>
         <a th:href="@{/view/depoimentos}">Depoimentos</a>
