--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,19 +14,17 @@
 
     <nav class="navbar">
         <a th:href="@{/}">Início</a>
-        <a th:href="@{/register/pessoa}">Cadastrar Pessoa</a>
-        <a th:href="@{/register/ocorrencia}">Registrar Ocorrência</a>
         <a th:href="@{/view/pessoas}">Pessoas</a>
-        <a th:href="@{/view/policiais}">Policiais</a>
-        <a th:href="@{/view/delegacias}">Delegacias</a>
-        <a th:href="@{/view/enderecos}">Endereços</a>
-        <a th:href="@{/view/ocorrencias}">Ocorrências</a>
-        <a th:href="@{/view/casos}">Casos</a>
+        <a th:href="@{/policiais}">Policiais</a>
+        <a th:href="@{/delegacias}">Delegacias</a>
+        <a th:href="@{/enderecos}">Endereços</a>
+        <a th:href="@{/ocorrencias}">Ocorrências</a>
+        <a th:href="@{/casos}">Casos</a>
         <a th:href="@{/view/casos-ativos}">Casos Ativos (VIEW)</a>
         <a th:href="@{/procedure/encerrar-caso}">Encerrar Caso</a>
-        <a th:href="@{/view/evidencias}">Evidências</a>
-        <a th:href="@{/view/relatorios}">Relatórios</a>
-        <a th:href="@{/view/depoimentos}">Depoimentos</a>
+        <a th:href="@{/evidencias}">Evidências</a>
+        <a th:href="@{/relatorios}">Relatórios</a>
+        <a th:href="@{/depoimentos}">Depoimentos</a>
     </nav>
 
     <h2>Bem-vindo!</h2>
